iteration1-feat/togglePlayers-added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p class = "player-win">wins</p>
     </section>
     <section class = "gameboard">
-        <h2 class="turn">It's 's turn</h2>
+        <h2 class="turn">It's ⭐️'s turn</h2>
             <div id = "cellBox">
                 <div>
                     <div class="cell" id = "boxOne"></div>
