feat/updateWinStatus-added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <section class = "player">
         <h2>⭐️</h2>
-        <p class = "player-win">wins</p>
+        <p><span id="playerWins">0</span> wins</p>
     </section>
     <section class = "gameboard">
         <h2 class="turn">It's ⭐️'s turn</h2>
@@ -38,7 +38,7 @@
         </section>
         <section class = "opponent">
             <h2>❤️</h2>
-            <p class = "opponent-win">wins</p>
+            <p><span id="opponentWins">0</span> wins</p>
         </section>
 
     <script src="main.js"></script>
