iteartion2-feat/updateWinStatus-added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
@@ -13,11 +14,11 @@
 </head>
 <body>
     <section class = "player">
-        <h2>⭐️</h2>
-        <p><span id="playerWins">0</span> wins</p>
+        <h2>🐶</h2>
+        <p><span id="playerWins">0</span> WINS</p>
     </section>
-    <section class = "gameboard">
-        <h2 class="turn">It's ⭐️'s turn</h2>
+    <section class = "gameboard" >
+        <h2 class="turn">It's 🐶's turn</h2>
             <div id = "cellBox">
                 <div>
                     <div class="cell" id = "boxOne"></div>
@@ -37,8 +38,8 @@
             </div>
         </section>
         <section class = "opponent">
-            <h2>❤️</h2>
-            <p><span id="opponentWins">0</span> wins</p>
+            <h2>🐵</h2>
+            <p><span id="opponentWins">0</span> WINS</p>
         </section>
 
     <script src="main.js"></script>
